[#746] FEEL prefix: Remove prefix when there are no name clashes.